fix prevent overflow on <pre>

--- a/assets/css/src/document.less
+++ b/assets/css/src/document.less
@@ -173,6 +173,7 @@ pre {
 	word-break: break-all;
 	margin-bottom: @space;
 	padding: 0.8em 1em;
+	overflow: scroll;
 	code {
 		padding: 0;
 		border: none;
